fix header banner text-align center!(windows:992px)

--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -1,14 +1,14 @@
 .text-left,
 .block-text-left {
-    text-align: left !important;
+    text-align: left;
 }
 
 .text-right,
 .block-text-right {
-    text-align: right !important;
+    text-align: right;
 }
 
 .text-center,
 .block-text-center {
-    text-align: center !important;
+    text-align: center;
 }
